[package]
name = "flomon_service"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"  # Configuration file parsing

# Database - with chrono support for DateTime types
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
dotenv = "0.15"

# HTTP client (for USGS API) - using rustls to avoid OpenSSL dependency
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
